test/classes/errors/nilability-init-var/init-var-nonnil-owned-from-nonnil-borrowed.chpl
//  lhs: owned!  rhs: borrowed!  error: mm

class MyClass {
  var x: int;
}
var ownRhs = new owned MyClass();
var rhs = ownRhs.borrow();

var lhs: owned MyClass = rhs;
