test/classes/errors/nilability-init-var/init-var-nonnil-owned-from-nonnil-borrowed.good
init-var-nonnil-owned-from-nonnil-borrowed.chpl:9: error: cannot assign to an owned variable from a borrowed class
